# Reinforcement_learning-demoGame2D

./: LICENSE  README.md
game/: CMakeLists.txt  README
game/src/: Application.cpp  CMakeLists.txt  EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp
game/src/components/: CollisionDetector.cpp  CollisionDetector.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Keymap.hpp  Map.hpp  MapChunkGenerator.cpp  MapChunkGenerator.hpp  Renderer.cpp  Renderer.hpp  RewardSender.cpp  RewardSender.hpp  SpriteManager.cpp  SpriteManager.hpp  Window.hpp
game/src/entities/: Bullet.cpp  Bullet.hpp  Character.cpp  Character.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp
model/: agent.py  dqn_model.py  main.py
